update tests
