# src/main/kotlin/com/wutsi/platform/account/dto/Account.kt
@@ -2,6 +2,7 @@ package com.wutsi.platform.account.dto
 
 import org.springframework.format.`annotation`.DateTimeFormat
 import java.time.OffsetDateTime
+import kotlin.Boolean
 import kotlin.Long
 import kotlin.String
 
@@ -15,5 +16,6 @@ public data class Account(
     @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
     public val created: OffsetDateTime = OffsetDateTime.now(),
     @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
-    public val updated: OffsetDateTime = OffsetDateTime.now()
+    public val updated: OffsetDateTime = OffsetDateTime.now(),
+    public val superUser: Boolean = false
 )
