# src/main/kotlin/com/wutsi/platform/account/dto/AccountSummary.kt
@@ -12,5 +12,6 @@ public data class AccountSummary(
     @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
     public val created: OffsetDateTime = OffsetDateTime.now(),
     @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
-    public val updated: OffsetDateTime = OffsetDateTime.now()
+    public val updated: OffsetDateTime = OffsetDateTime.now(),
+    public val superUser: Boolean = false
 )
